--- a/writeup.ipynb
+++ b/writeup.ipynb
@@ -146,6 +146,26 @@
     "### Have the model parameters been tuned appropriately?\n",
     "Learning rate parameters are chosen with explanation, or an Adam optimizer is used.\n",
     "\n",
+    "Here is the code where I use the optimizer, loss and metrics:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.compile(loss='mean_squared_error',\n",
+    "              optimizer='adam',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Is the training data chosen appropriately?\n",
     "I have use the data from the course. In order to get robustness and reduce overffiting.\n",
     "I borrow a usb steering wheel in order to get data, but eventualy it has not been necessary since I have been able to keep the car on the track, even though trainning just with left, center and right images is more difficult.\n",
@@ -153,7 +173,7 @@
     "## Architecture and Training Documentation\n",
     "### Is the solution design documented?\n",
     "\n",
-    "The README thoroughly discusses the approach taken for deriving and designing a model architecture fit for solving the given problem.\n",
+    "Firstly I started with a model from P2 sign recognition, made some modifications, added layers, but given that Nvidia did a good work and I was not as confident as I am now, I eventualy chose the Nvidia model but addapted to my image chopping.\n",
     "\n",
     "### Is the model architecture documented?\n",
     "I have used the Nvidia network with some differences.\n",
@@ -170,23 +190,123 @@
     "\n",
     "![alt text](images/kerasnet.png \"Keras Neural Network\")\n",
     "\n",
-    "\n",
-    "\n",
     "### Is the creation of the training dataset and training process documented?\n",
-    "\t\n",
+    "The trainning data set has been generated on the fly by data aumentation.\n",
     "\n",
-    "The README describes how the model was trained and what the characteristics of the dataset are. Information such as how the dataset was generated and examples of images from the dataset should be included.\n",
+    "Here it can seen the generator code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def generator(samples, batch_size=32):\n",
+    "    num_samples = len(samples)\n",
+    "    while 1: # Used as a reference pointer so code always loops back around\n",
+    "        sklearn.utils.shuffle(samples)\n",
+    "        for offset in range(0, num_samples, batch_size):\n",
+    "            batch_samples = samples[offset:offset+batch_size]\n",
+    "            images = []\n",
+    "            angles = []\n",
+    "            for batch_sample in batch_samples:\n",
+    "                side = np.random.randint(3)\n",
+    "                if side==0:\n",
+    "\t            #center\n",
+    "                    name = './data/IMG/'+batch_sample[0].split('/')[-1]\n",
+    "                    center_image = cv2.imread(name)\n",
+    "                    center_angle = float(batch_sample[3])\n",
+    "                    image=center_image\n",
+    "                    angle=center_angle\n",
+    "                if side==1:\n",
+    "                    #left\n",
+    "                    name = './data/IMG/'+batch_sample[1].split('/')[-1]\n",
+    "                    left_image = cv2.imread(name)\n",
+    "                    left_angle = float(batch_sample[3])+0.5\n",
+    "                    image=left_image\n",
+    "                    angle=left_angle\n",
+    "                if side==2:\n",
+    "                    #right\n",
+    "                    name = './data/IMG/'+batch_sample[2].split('/')[-1]\n",
+    "                    right_image = cv2.imread(name)\n",
+    "                    right_angle = float(batch_sample[3])-0.5\n",
+    "                    image=right_image\n",
+    "                    angle=right_angle\n",
+    "                image=cv2.cvtColor(image,cv2.COLOR_BGR2RGB)\n",
+    "                flip=np.random.randint(5)\n",
+    "                if flip==1:\n",
+    "                    image = np.fliplr(image)\n",
+    "                    angle = -angle\n",
+    "                if flip==2:\n",
+    "                    image,angle=trans_image(image,angle,100)\n",
+    "                if flip==3:\n",
+    "                    image = augment_brightness_camera_images(image)\n",
+    "                if flip==4:\n",
+    "                    image = add_random_shadow(image)\n",
+    "                images.append(image)\n",
+    "                angles.append(angle)\n",
+    "            # trim image to only see section with road\n",
+    "            X_train = np.array(images,np.float32)\n",
+    "            X_train = X_train[:,40:-20,:,:] \n",
+    "            y_train = np.array(angles)\n",
+    "            yield sklearn.utils.shuffle(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have used callback in the fitting proccess in order to choose the best model generated. I have deffined a ModelCheckpoint that saves the best model up to the actual epoch.\n",
     "\n",
+    "The best model is:\n",
+    "\n",
+    "model-checkpoint-63-0.16.hdf5\n",
+    "\n",
+    "A model with accuracy 0.16 at epoch 63, I ran the model for 100 epochs.\n",
+    "\n",
+    "Here is the code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filepath=\"model-checkpoint-{epoch:02d}-{val_acc:.2f}.hdf5\"\n",
+    "checkpoint = ModelCheckpoint(filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
+    "callbacks_list = [checkpoint]\n",
+    "model.fit_generator(train_generator, \n",
+    "                    samples_per_epoch= len(train_samples)*3, \n",
+    "                    validation_data=validation_generator, \n",
+    "                    nb_val_samples=len(validation_samples),\n",
+    "                    callbacks=callbacks_list, \n",
+    "                    nb_epoch=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simulation\n",
     "### Is the car able to navigate correctly on test data?\n",
-    "\t\n",
+    "The model is able to drive all the test1 track in full speed 30mph, with no issues.\n",
     "\n",
-    "No tire may leave the drivable portion of the track surface. The car may not pop up onto ledges or roll over any surfaces that would otherwise be considered unsafe (if humans were in the vehicle).\n",
+    "I uploaded a video where it can be seen how well the model perform.\n",
     "\n",
-    "Suggestions to Make Your Project Stand Out!\n",
-    "Track Two\n",
     "\n",
-    "The simulator contains two tracks. To meet specifications, the car must successfully drive around track one. Track two is more difficult. See if you can get the car to stay on the road for track two as well."
+    "## Suggestions to Make Your Project Stand Out!\n",
+    "### Track Two\n",
+    "Since I am running out of time I have not been able to generalize more the model in order to work on test2 track.\n",
+    "\n",
+    "I am planning to make a autonomous RC car with real data, in a short time.\n",
+    "\n",
+    "But for the moment I am going to finish P5."
    ]
   },
   {
