--- a/writeup.ipynb
+++ b/writeup.ipynb
@@ -259,7 +259,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have used callback in the fitting proccess in order to choose the best model generated. I have deffined a ModelCheckpoint that saves the best model up to the actual epoch.\n",
+    "The code above augment the data in a number os ways.\n",
+    "I show a image for every type of data augmentation:\n",
+    "* flip: flip the image in order to balance movement.\n",
+    "![alt text](images/data_augmentation/flip.png \"flip data augmentation\")\n",
+    "* shift_left: shift image to the left in order to do a kind of recovery data\n",
+    "![alt text](images/data_augmentation/shift_left.png \"shift_left data augmentation\")\n",
+    "* shift_right: shift image to the right in order to do a kind of recovery data\n",
+    "![alt text](images/data_augmentation/shift_right.png \"shift_right data augmentation\")\n",
+    "* brightness: change brightness in order to make it brightness data invariant\n",
+    "![alt text](images/data_augmentation/brightness.png \"brightness data augmentation\")\n",
+    "* shadow: add shadow to image in order to make it shadow data invariant\n",
+    "![alt text](images/data_augmentation/shadow.png \"shadow data augmentation\")\n",
+    "* usual: just usual image from the dataset\n",
+    "![alt text](images/data_augmentation/usual.png \"usual data augmentation\")\n",
+    "\n",
+    "This data augmentation has been paramount in order to make the neuralnetwork work properly. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to get the best model I have done a kind of earlystoping, since I have used a callback in the fitting proccess in order to choose the best model generated. I have deffined a ModelCheckpoint that saves the best model up to the actual epoch.\n",
     "\n",
     "The best model is:\n",
     "\n",
